@@ -1,4 +1,5 @@
 1.17 -> 2.0:
+    - jbj: wire up a multi-token RPN input stack using opt->argDescrip.
     - jbj: change error returns to assert failures for development.
 
 1.16 -> 1.17:
